// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de GifGrid should mostrar correctamente el componente 1`] = `
<Fragment>
  <h3
    className="animate__animated animated__fadeIn"
  >
    Lol
  </h3>
  <p
    className="animate__animated animated__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Prueba de GifGrid should mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animated__fadeIn"
  >
    Lol
  </h3>
  <p
    className="animate__animated animated__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquiercosa.jpg"
    />
  </div>
</Fragment>
`;
